tests/NormalTests/paczka1/small_fuzzy/83775139.err
Error in line 5: NjCOnWl S890 45,2
Error in line 10: 2mwnR8Kyqdv S8g0 31,3
Error in line 3: 2mwnR8Kyqdv S890 46,0
